k8s/home-assistant/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: k8s.lan.aomame.de
spec:
  tls:
    - secretName: hass-lan-aomame-de-tls
      hosts:
        - hass.lan.aomame.de
  rules:
    - host: hass.lan.aomame.de
      http:
        paths:
          - backend:
              serviceName: home-assistant
              servicePort: 8123
